[workspace]
resolver = "2"
members = [
    "accounts-db",
    "sdk",
    "runtime",
]

[workspace.package]
version = "2.2.0"
authors = ["Lamport MCP Contributors"]
repository = "https://github.com/lamportunit/lamport-mcp"
homepage = "https://lamport.fun"
license = "Apache-2.0"
edition = "2021"

[workspace.dependencies]
borsh = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
log = "0.4"