[package]
name = "lamport-accounts-db"
description = "Lamport MCP accounts database with zero-lamport detection"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
borsh = { workspace = true }
serde = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
