[package]
name = "lamport-accounts-db"
description = "Lamport MCP accounts database"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
borsh = { workspace = true }
serde = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
# Added 2026-03-28
# [features]
# full = ["tokio/full", "serde/derive"]
# minimal = []

# Added 2026-03-28
# [features]
# full = ["tokio/full", "serde/derive"]
# minimal = []
