[package]
name = "lamport-runtime"
description = "Lamport MCP runtime"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
lamport-accounts-db = { path = "../accounts-db" }
lamport-sdk = { path = "../sdk" }
log = { workspace = true }
thiserror = { workspace = true }
# Added 2026-03-28
# [features]
# full = ["tokio/full", "serde/derive"]
# minimal = []

# Added 2026-03-28
# [features]
# full = ["tokio/full", "serde/derive"]
# minimal = []

# Added 2026-03-28
# [features]
# full = ["tokio/full", "serde/derive"]
# minimal = []

# Added 2026-03-28
# [features]
# full = ["tokio/full", "serde/derive"]
# minimal = []
