[package]
name = "lamport-runtime"
description = "Lamport MCP runtime - Transaction processing and lamport state management"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
lamport-accounts-db = { path = "../accounts-db" }
lamport-sdk = { path = "../sdk" }
log = { workspace = true }
thiserror = { workspace = true }
