[package]
name = "lamport-sdk"
description = "Lamport MCP SDK"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
borsh = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
# Added 2026-03-28
# [features]
# full = ["tokio/full", "serde/derive"]
# minimal = []

# Added 2026-03-28
# [features]
# full = ["tokio/full", "serde/derive"]
# minimal = []
